# bemap

./: .gitignore  BEMAPConfig.cmake  CMakeLists.txt  LICENSE  README.md
common/cmake/: FindOpenCL.cmake
common/data/: README.md  lena1024.pgm
common/data/Blif/: alu2.blif
common/inc/: c_util.hpp  c_util_img.hpp  c_util_stopwatch.hpp  cl_util_drvapi.hpp
src/BEMAPTemplate/: CMakeLists.txt
src/BEMAPTemplate/cl/: BEMAPTemplate_gold.cpp  CMakeLists.txt  README.md
src/BEMAPTemplate/openmp/: BEMAPTemplate.cpp  BEMAPTemplate_gold.cpp  README.md  main.cpp
src/BEMAPTemplate/original/: BEMAPTemplate.hpp  BEMAPTemplate_gold.hpp  README.md
src/BackProjection/: CMakeLists.txt
src/BackProjection/cl/: BackProjection.cl  BackProjection.cpp  BackProjection.hpp  BackProjection_common.hpp  BackProjection_gold.cpp  BackProjection_gold.hpp  README.md  main.cpp
src/BackProjection/cl/TestRun/: clean
src/BackProjection/cuda/: BackProjection.cpp  BackProjection.hpp  BackProjection_kernel.cu  README.md  main.cpp
src/BackProjection/cuda/TestRun/: clean
src/BackProjection/openmp/: BackProjection.cpp  BackProjection.hpp  BackProjection_gold.cpp  BackProjection_gold.hpp  README.md  main.cpp
src/BackProjection/openmp/TestRun/: clean
src/BackProjection/original/: README.md  main.cpp
src/BlackScholes/: CMakeLists.txt
src/BlackScholes/cl/: BlackScholes.cl  BlackScholes.cpp  BlackScholes.hpp  BlackScholes_gold.cpp  README.md  main.cpp
src/BlackScholes/cuda/: BlackScholes.cpp  BlackScholes.hpp  BlackScholes_gold.cpp  BlackScholes_gold.hpp  BlackScholes_kernel.cu  CMakeLists.txt  README.md  common.hpp  main.cpp
src/BlackScholes/openmp/: BlackScholes.cpp  BlackScholes.hpp  BlackScholes_gold.cpp  CMakeLists.txt  README.md  main.cpp
src/BlackScholes/original/: BlackScholes.cpp  BlackScholes.hpp  BlackScholes_gold.cpp  BlackScholes_gold.hpp  CMakeLists.txt  README.md  README.txt  main.cpp
src/GaussianFilter/: CMakeLists.txt
src/GaussianFilter/cl/: GaussianFilter.cl  GaussianFilter.cpp  GaussianFilter.hpp  GaussianFilter_common.hpp  GaussianFilter_gold.cpp  GaussianFilter_gold.hpp  README.md  main.cpp
src/GaussianFilter/cuda/: CMakeLists.txt  GaussianFilter.cpp  GaussianFilter.hpp  GaussianFilter_gold.cpp  GaussianFilter_gold.hpp  GaussianFilter_kernel.cu  README.md  common.hpp  main.cpp
src/GaussianFilter/cuda/TestRun/: clean
src/GaussianFilter/openmp/: GaussianFilter.hpp  GaussianFilter_gold.cpp  GaussianFilter_gold.hpp  README.md
src/GaussianFilter/original/: GaussianFilter.cpp  GaussianFilter.hpp  GaussianFilter_gold.cpp  README.md  main.cpp
src/GrayScale/: CMakeLists.txt
src/GrayScale/cl/: GrayScale.cl  GrayScale.cpp  GrayScale.hpp  GrayScale_gold.cpp  README.md  main.cpp
src/GrayScale/cl/TestRun/: clean
src/GrayScale/cuda/: GrayScale.cpp  GrayScale.hpp  GrayScale_kernel.cu  README.md  main.cpp
src/GrayScale/openmp/: GrayScale_gold.cpp  GrayScale_gold.hpp  README.md
src/GrayScale/original/: GrayScale.cpp  GrayScale.hpp  GrayScale_gold.cpp  README.md  main.cpp
src/MonteCarlo/: CMakeLists.txt
src/MonteCarlo/cl/: CMakeLists.txt  MonteCarlo.cl  MonteCarlo.cpp  MonteCarlo.hpp  MonteCarlo_common.hpp  MonteCarlo_gold.cpp  README.md  main.cpp
src/MonteCarlo/cuda/: CMakeLists.txt  MonteCarlo.cpp  MonteCarlo.hpp  MonteCarlo_gold.cpp  MonteCarlo_kernel.cu  README.md  common.hpp  main.cpp  mt19937ar.c  mt19937ar.h
src/MonteCarlo/openmp/: CMakeLists.txt  MonteCarlo.cpp  MonteCarlo.hpp  MonteCarlo_gold.cpp  README.md  main.cpp  mt19937ar.c
src/MonteCarlo/openmp/TestRun/: clean
src/MonteCarlo/original/: CMakeLists.txt  MonteCarlo.cpp  MonteCarlo.hpp  MonteCarlo_gold.cpp  MonteCarlo_gold.hpp  README.md  main.cpp
src/MultiGPULogicSimulation/cl/: MultiGPULogicSimulation_gold.cpp  README.md  main.cpp
src/MultiGPULogicSimulation/openmp/: MultiGPULogicSimulation.hpp  MultiGPULogicSimulation_gold.cpp  README.md
src/MultiGPULogicSimulation/original/: CMakeLists.txt  MultiGPULogicSimulation.cpp  MultiGPULogicSimulation.hpp  README.md  main.cpp  module.cpp  module.hpp
template/original/: BEMAPTemplate.cpp  BEMAPTemplate.hpp  BEMAPTemplate_gold.cpp  BEMAPTemplate_gold.hpp  README.md  main.cpp
