CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

# Get the project's name
GET_FILENAME_COMPONENT(PARRENT_DIR "${CMAKE_CURRENT_SOURCE_DIR}" PATH)
GET_FILENAME_COMPONENT(BEMAP_PROJECT_NAME "${PARRENT_DIR}" NAME)
SET(BEMAP_EXECUTABLE ${BEMAP_PROJECT_NAME}_cuda)

PROJECT( ${BEMAP_EXECUTABLE} )

SET(TOPDIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../)
INCLUDE(${TOPDIR}/BEMAPConfig.cmake)

FIND_PACKAGE(CUDA 4.0 REQUIRED)

INCLUDE_DIRECTORIES(${BEMAP_INCLUDE_DIRECTORIES} ${CUDA_INCLUDE_DIRS})

CUDA_ADD_EXECUTABLE(${BEMAP_EXECUTABLE} main.cpp ${BEMAP_PROJECT_NAME}.cpp ${BEMAP_PROJECT_NAME}_gold.cpp ${BEMAP_PROJECT_NAME}_kernel.cu)

GET_TARGET_PROPERTY(EXEFILE ${BEMAP_EXECUTABLE} LOCATION)
ADD_CUSTOM_COMMAND(TARGET ${BEMAP_EXECUTABLE}
  POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E copy ${EXEFILE} ${BEMAP_BINARY_DIR}/.
  )

