CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 )

# Get the project's name
GET_FILENAME_COMPONENT(PARRENT_DIR "${CMAKE_CURRENT_SOURCE_DIR}" PATH)
GET_FILENAME_COMPONENT(BEMAP_PROJECT_NAME "${PARRENT_DIR}" NAME)
SET(BEMAP_EXECUTABLE ${BEMAP_PROJECT_NAME}_omp)

PROJECT ( ${BEMAP_PROJECT_NAME} ) 

SET(TOPDIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../)
INCLUDE(${TOPDIR}/BEMAPConfig.cmake)

INCLUDE_DIRECTORIES ( ${BEMAP_INCLUDE_DIRECTORIES} )

ADD_EXECUTABLE ( ${BEMAP_EXECUTABLE} main.cpp ${BEMAP_PROJECT_NAME}.cpp ${BEMAP_PROJECT_NAME}_gold.cpp )

GET_TARGET_PROPERTY(EXEFILE ${BEMAP_EXECUTABLE} LOCATION)
ADD_CUSTOM_COMMAND(TARGET ${BEMAP_EXECUTABLE}
  POST_BUILD

  # Copy to /bin
  COMMAND ${CMAKE_COMMAND} -E copy ${EXEFILE} ${BEMAP_BINARY_DIR}/.
  )

IF(UNIX OR APPLE)
  SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
  SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
ELSEIF(WIN32)
  SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /openmp")
  SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /openmp")
  SET (CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /openmp")
  SET (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /openmp")
  SET (CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /openmp")
  SET (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /openmp")
  SET (CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO} /openmp")
  SET (CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /openmp")
  SET (CMAKE_C_FLAGS_MINSIZEREL "${CMAKE_C_FLAGS_MINSIZEREL} /openmp")
  SET (CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} /openmp")
ELSE()
  SET (CMAKE_C_FLAGS "")
  SET (CMAKE_CXX_FLAGS "")
ENDIF()