CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 )

# Get the project's name
GET_FILENAME_COMPONENT(PARRENT_DIR "${CMAKE_CURRENT_SOURCE_DIR}" PATH)
GET_FILENAME_COMPONENT(BEMAP_PROJECT_NAME "${PARRENT_DIR}" NAME)
SET(BEMAP_EXECUTABLE ${BEMAP_PROJECT_NAME}_ref)

PROJECT ( ${BEMAP_PROJECT_NAME} ) 

SET(TOPDIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../)
INCLUDE(${TOPDIR}/BEMAPConfig.cmake)

INCLUDE_DIRECTORIES ( ${BEMAP_INCLUDE_DIRECTORIES} )

ADD_EXECUTABLE ( ${BEMAP_EXECUTABLE} main.cpp ${BEMAP_PROJECT_NAME}.cpp ${BEMAP_PROJECT_NAME}_gold.cpp mt19937ar.c )

GET_TARGET_PROPERTY(EXEFILE ${BEMAP_EXECUTABLE} LOCATION)
ADD_CUSTOM_COMMAND(TARGET ${BEMAP_EXECUTABLE}
  POST_BUILD

  # Copy to /bin
  COMMAND ${CMAKE_COMMAND} -E copy ${EXEFILE} ${BEMAP_BINARY_DIR}/.
  )